# terminio

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
src/: main.cpp
src/view/: MainPage.cpp  MainPage.hpp  NoteInput.hpp  NotesPage.cpp  NotesPage.hpp  PageTools.cpp  PageTools.hpp
